<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="match_parent"
        android:layout_height="52dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@color/green_100"
        />

    <!-- TextView pour le texte "Catalogue" -->
    <TextView
        android:id="@+id/textViewCatalogue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_catalog"
        android:textColor="#FFFFFF"
        android:textSize="28sp"
        app:layout_constraintTop_toTopOf="@+id/imageView2"
        app:layout_constraintBottom_toBottomOf="@+id/imageView2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintVertical_bias="0.5" />

    <!-- Barre de recherche -->
    <androidx.appcompat.widget.SearchView
        android:id="@+id/searchView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        app:layout_constraintTop_toBottomOf="@+id/imageView2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@drawable/search_rounded_background"
        android:foreground="@drawable/search_rounded_background" />

    <!-- RecyclerView pour les subCategories -->
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/categoryRecyclerView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@+id/searchView"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <GridView
        android:id="@+id/itemsGridView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="5dp"
        android:numColumns="2"
        android:horizontalSpacing="10dp"
        android:verticalSpacing="20dp"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@+id/searchView"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/text_search_no_result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/search_no_result"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintTop_toBottomOf="@+id/searchView" />

    <ImageView
        android:id="@+id/catalog_logo_left"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginRight="10dp"
        android:visibility="gone"
        app:layout_constraintEnd_toStartOf="@+id/catalog_logo_middle"
        app:layout_constraintTop_toTopOf="@+id/catalog_logo_middle"
        app:srcCompat="@drawable/meccanocar_cercle_gauche" />

    <ImageView
        android:id="@+id/catalog_logo_middle"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginStart="168dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/searchView"
        app:layout_constraintVertical_bias="0.399"
        app:srcCompat="@drawable/meccanocar_cercle_milieu" />

    <ImageView
        android:id="@+id/catalog_logo_right"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginLeft="10dp"
        android:visibility="gone"
        app:layout_constraintStart_toEndOf="@+id/catalog_logo_middle"
        app:layout_constraintTop_toTopOf="@+id/catalog_logo_middle"
        app:srcCompat="@drawable/meccanocar_cercle_droite" />

    <TextView
        android:id="@+id/textViewLoadingItems"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="144dp"
        android:layout_marginTop="5dp"
        android:text="@string/loading"
        android:textSize="18sp"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/catalog_logo_middle" />

</androidx.constraintlayout.widget.ConstraintLayout>